refactor: getFirst() replaced by get(0)